changes made for mobile view

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div  [class.darkMode]="darkMode">
+<div  [class.darkMode]="darkMode" class="whole">
   <div *ngIf="isNavbar">
     <app-navbar></app-navbar>
   </div>
