--- a/Frontend/src/app/notification/notification/notification.component.html
+++ b/Frontend/src/app/notification/notification/notification.component.html
@@ -77,7 +77,7 @@
 </div>
 
    <div class=" friend" *ngIf="showFollowrequests">
-     <div class="text" *ngFor="let user of followerNotification" id="notiFollowers">
+     <div class="text follow" *ngFor="let user of followerNotification" id="notiFollowers">
     <div class="icon follow" id="followicon">
       <i class="fas fa-user plus"></i>
       <span style="color: rgb(181, 177, 177); font-weight: 600;"><a href="#">{{user.name}}</a> started following you.</span>
