--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,7 +1,4 @@
-.whole {
-  display: flex;
-  width: 100%;
-}
+
 .darkMode {
   background-color: #000000;
   color: white;
@@ -10,4 +7,13 @@
 }
 .darkMode #profile{
   color: white;
+}
+@media only screen and (max-width: 1200px) {
+  .content {
+    margin-left: 10px;
+  }
+  .whole {
+  height: 896px;
+  overflow: hidden;
+  }
 }
