--- a/Frontend/src/app/explore/explore/explore.component.css
+++ b/Frontend/src/app/explore/explore/explore.component.css
@@ -23,17 +23,14 @@
   padding: 20px;
 }
 
-
-
-.explore-item img,.explore-item video {
+.explore-item img,
+.explore-item video {
   width: 100%;
   height: 300px;
   transition: filter 0.3s;
   display: flex;
-  object-fit:contain ;
-
+  object-fit: contain;
 }
-
 
 .explore-item {
   transition: transform 0.3s ease;
@@ -42,7 +39,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 4px;
 }
-
 
 .explore-item a {
   display: block;
@@ -63,10 +59,11 @@
   color: inherit;
 }
 
-.image-wrapper  video,.image-wrapper img{
-object-fit: contain;
+.image-wrapper video,
+.image-wrapper img {
+  object-fit: contain;
 }
-.image-wrapper  video{
+.image-wrapper video {
   position: relative;
   left: 20px;
 }
@@ -74,7 +71,6 @@ object-fit: contain;
 .image-wrapper:hover {
   filter: brightness(80%);
   transform: scale(1.01);
-
 }
 .overlay {
   display: flex;
@@ -108,6 +104,19 @@ object-fit: contain;
   color: darkred;
 }
 
-button{
+button {
   border: none;
+}
+@media only screen and (max-width: 1200px) {
+  .explore-page {
+    position: relative;
+    left: 0px;
+    width: 100%;
+  }
+  .explore-content {
+    overflow-y: scroll;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+  }
 }
