--- a/Frontend/src/app/notification/notification/notification.component.css
+++ b/Frontend/src/app/notification/notification/notification.component.css
@@ -150,3 +150,27 @@ height: 60px;
   position: relative;
   top: 30px;
  }
+ @media only screen and (max-width: 1200px) {
+.notifications {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+  box-shadow: 10px 2px 6px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 400px;
+}
+
+.content .notification,.content .follow{
+  width: 330px;
+  right: 100px;
+  position: relative;
+}
+.noti{
+  position: relative;
+  left: 25px;
+}
+  }
