--- a/Frontend/src/app/search/search/search.component.css
+++ b/Frontend/src/app/search/search/search.component.css
@@ -67,3 +67,12 @@ img {
   font-size: 16px;
   margin-top: 100px;
 }
+@media only screen and (max-width: 1200px) {
+  .container {
+    text-align: center;
+    max-width: 420px;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-right: 1px solid rgb(207, 206, 206);
+  }
+  }
