--- a/Frontend/src/app/shared/navbar/navbar.component.css
+++ b/Frontend/src/app/shared/navbar/navbar.component.css
@@ -152,3 +152,57 @@
 
   color: black;
 }
+@media only screen and (max-width: 1200px) {
+  .navTitles{
+    display: flex;
+    flex-direction: row;
+  }
+  .navTitles div{
+    height: 25px;
+  }
+  .navTitles strong{
+    display: none;
+  }
+  .navTitles span{
+   font-size: xx-large;
+  }
+  .nav{
+    padding: 5px;
+    width: 100%;
+    height: 150px;
+    border-right: 1px solid rgb(209, 209, 209);
+    position: fixed;
+    top: 800px;
+    right: 23px;
+    }
+    #logo{
+      display: none;
+    }
+    #logoImage{
+      height: 60px;
+      width: 60px;
+      position: relative;
+      top: 3px;
+      left:0px;
+    }
+    .content{
+      margin-left: 150px;
+
+    }
+    .navTitles img{
+      display: none;
+    }
+    .navTitles div:hover{
+      background-color: rgb(229, 229, 229);
+      border-radius: 10px;
+      transition: 0.4s ease-in-out;
+      transform: scale(1.0);
+      height: 50%;
+      }
+      .lastNavItem{
+        margin-top: 0px;
+      }
+      .profileDiv{
+        display: block;
+      }
+}
