--- a/Frontend/src/app/shared/navbar/navbar.component.css
+++ b/Frontend/src/app/shared/navbar/navbar.component.css
@@ -172,7 +172,8 @@
     height: 150px;
     border-right: 1px solid rgb(209, 209, 209);
     position: fixed;
-    top: 800px;
+    /* top: 800px; */
+    bottom: 100px;
     right: 23px;
     }
     #logo{
