Added images in drive

--- a/Frontend/src/app/home/saved-posts/saved-posts.component.html
+++ b/Frontend/src/app/home/saved-posts/saved-posts.component.html
@@ -11,8 +11,8 @@
             favorite
           </span>{{post.likes}}
         </div>
-        <img src="{{imgRetrival+post.fileName}}" alt="" (click)="viewPost(post)" *ngIf="!post.videoFile">
-        <video [src]="imgRetrival+post.fileName" *ngIf="post.videoFile" autoplay [muted]="true" (click)="viewPost(post)"></video>
+        <img src="{{post.fileUrl}}" alt="" (click)="viewPost(post)" *ngIf="!post.videoFile">
+        <video [src]="post.fileUrl" *ngIf="post.videoFile" autoplay [muted]="true" (click)="viewPost(post)"></video>
     </div>
   </div>
 </div>
