--- a/Frontend/src/app/home/stories/stories.component.html
+++ b/Frontend/src/app/home/stories/stories.component.html
@@ -1,10 +1,10 @@
 <!-- adding story by the user  -->
 <div class="storiesContainer">
  <div>
-  
+
   <div class="story">
     <div (click)="openCreateStoryComponent()" class="post-story">
-    <img src="{{profileRetrival+ userDp}}"alt="" />
+    <img src="{{userDp}}"alt="" />
     <span class="material-symbols-outlined " id="addStory"> add_circle </span>
     <br/>
     <small id="addStories">Add story</small>
