--- a/Frontend/src/app/home/stories/view-story/view-story.component.html
+++ b/Frontend/src/app/home/stories/view-story/view-story.component.html
@@ -21,7 +21,7 @@
           <span class="material-symbols-outlined" id="arrowf" *ngIf="this.storyImage.file.length!=0 && (counter+1)!=this.storyImage.file.length" (click)="forward()">
             arrow_forward_ios
           </span>
-        <img class="story-image" [src]="imgRetrivalPath + imageData" alt="No image" />
+        <img class="story-image" [src]="imageData" alt="No image" />
       </div>
       <nav class="slide-nav">
         <div class="slide-thumb"></div>
