--- a/Frontend/src/app/notification/notification/notification.component.html
+++ b/Frontend/src/app/notification/notification/notification.component.html
@@ -83,7 +83,7 @@
       <span style="color: rgb(181, 177, 177); font-weight: 600;"><a href="#">{{user.name}}</a> started following you.</span>
     </div>
     <div>
-      <img src="{{profileRetrival+user.profilePhoto}}" alt="" srcset="">
+      <img src="{{user.profilePhoto}}" alt="" srcset="">
     </div>
     </div>
     <div *ngIf="followerNotification.length==0" style="text-align: center;">
