--- a/Frontend/src/app/profile/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/profile/edit-profile/edit-profile.component.html
@@ -3,7 +3,7 @@
   <hr />
   <div class="head">
     <img
-    src="{{profilePicRetrival+user.profilePhoto}}" />
+    src="{{user.fileUrl}}" />
     <div class="description">
       <p>{{ user.userName }}</p>
       <span id="photo" (click)="changeProfile()"> Change profile photo </span>
