--- a/Frontend/src/app/shared/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/navbar/navbar.component.html
@@ -37,7 +37,7 @@
     <!-- <mat-dialog-content></mat-dialog-content> -->
     <!-- <a href="profile/home/{{userId}}" id="profie"> -->
       <div class="profileDiv" (click)="routeToProfile()">
-      <img [src]=" imgRetrival+ userDp" alt="" id="profilepic">
+      <img [src]="userDp" alt="" id="profilepic">
       <strong id="profile">Profile</strong>
     </div>
     <!-- </a> -->
