--- a/Frontend/src/app/home/homepage/homepage.component.html
+++ b/Frontend/src/app/home/homepage/homepage.component.html
@@ -6,7 +6,7 @@
       <div class="post">
         <div class="postHeader">
           <img
-            src="{{profileRetrival+ user.userDetails[0].profilePhoto }}"
+            src="{{user.userDetails[0].profilePhoto }}"
             alt=""/>
           <strong>{{ user.userDetails[0].userName }}</strong>
           <div>
@@ -21,12 +21,12 @@
         </div>
         <div class="postImage">
           <img
-            [src]="imgRetrivalPath + user.fileName"
+            [src]="user.fileUrl"
             alt=""
             srcset=""
             *ngIf="!user.videoFile"
           />
-          <video [src]="imgRetrivalPath+user.fileName" *ngIf="user.videoFile" [muted]="true" autoplay></video>
+          <video [src]="user.fileUrl" *ngIf="user.videoFile" [muted]="true" autoplay></video>
         </div>
 
         <div class="footer">
