--- a/Frontend/src/app/message/group-details/group-details.component.html
+++ b/Frontend/src/app/message/group-details/group-details.component.html
@@ -25,7 +25,7 @@
 
   <div class="members">
 <div *ngFor="let member of memberDetails">
-  <img src="{{profileRetrival+member.profilePhoto}}" alt="" srcset="">
+  <img src="{{member.profilePhoto}}" alt="" srcset="">
   <strong>{{member.userName}}</strong>
   <span *ngIf="member.admin" id="admin">Admin</span>
 </div>
@@ -46,7 +46,7 @@
       <div class="user" *ngFor="let user of searchResult">
         <div id="tapToChat">
           <div class="userDp">
-            <img src="{{userDp+user.profilePhoto}}" alt="" srcset="">
+            <img src="{{user.profilePhoto}}" alt="" srcset="">
             <strong>{{ user.name }}</strong> <br>
             <small *ngIf="user.userName==username" id="you">(You)</small>
             <button type="submit"  [disabled]="isUserAlreadyMember(user)" (click)="addUsers(user)" class="btn">Add</button>
