--- a/Frontend/src/app/profile/following/following.component.html
+++ b/Frontend/src/app/profile/following/following.component.html
@@ -12,7 +12,7 @@
     <div class="main" *ngFor="let user of followingDetails">
       <img
         class="profile"
-        src="{{ profilePicRetrival + user.profilePhoto }}"
+        src="{{user.profilePhoto }}"
         alt=""
       />
       <div class="name">
