--- a/Frontend/src/app/search/search/search.component.html
+++ b/Frontend/src/app/search/search/search.component.html
@@ -4,7 +4,7 @@
     <form class="searchForm">
       <span class="material-symbols-outlined" id="icon"> search </span>
       <input
-        type="tel"
+        type="text"
         name="search"
         class="searchInput"
         autocomplete="off"
