Retrieve images in admin

--- a/Frontend/src/app/admin/all-users/all-users.component.html
+++ b/Frontend/src/app/admin/all-users/all-users.component.html
@@ -18,7 +18,7 @@
                     <div class="img">
                       <img
                         class="ribbon"
-                        src="{{ profilePicRetrival + list.profilePhoto }}"
+                        src="{{list.profilePhoto }}"
                         (click)="passId(list._id)"
                         alt="image"
                       />
