--- a/Frontend/src/app/admin/unblock/unblock.component.html
+++ b/Frontend/src/app/admin/unblock/unblock.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="userDetail">
   <div class="container" *ngIf="!data.show">
     <div>
-      <img src="{{ profilePicRetrival + userDetail.profilePhoto }}" />
+      <img src="{{ userDetail.profilePhoto }}" />
       <p class="description">
         Are you sure to unblock <i>{{ userDetail.userName }}</i> ?
       </p>
@@ -16,7 +16,7 @@
 
   <div class="container" *ngIf="data.show">
     <div>
-      <img src="{{ profilePicRetrival + userDetail.profilePhoto }}" />
+      <img src="{{ userDetail.profilePhoto }}" />
       <p class="description">
         Are you sure to Block <i>{{ userDetail.userName }}</i> ?
       </p>
@@ -32,7 +32,7 @@
 <div *ngIf="postDetail">
   <div class="container" *ngIf="!data.display">
     <div>
-      <img src="{{ profilePicRetrival + postDetail.fileName }}" />
+      <img src="{{ postDetail.fileUrl }}" />
       <p class="description">
         Are you sure to unblock <i>{{ postDetail.userName }}</i> ?
       </p>
