--- a/Frontend/src/app/shared/more-options/more-options.component.css
+++ b/Frontend/src/app/shared/more-options/more-options.component.css
@@ -10,6 +10,9 @@
   cursor: pointer;
   height: 60px;
  width: 100%;
+ /* position: relative;
+ left: 30px; */
+
 }
 .container div:hover{
   background-color: rgb(229, 229, 229);
