getting started with seo

--- a/Frontend/src/app/admin/manage-reports/manage-reports.component.html
+++ b/Frontend/src/app/admin/manage-reports/manage-reports.component.html
@@ -48,7 +48,7 @@
       </div>
       <div *ngIf="!show">
         <div class="data" *ngFor="let post of post">
-          <img class="post" src="{{post.fileName }}" />
+          <img class="post" src="{{post.fileUrl}}" />
           <div class="name">
             <p>{{ post.username }}</p>
           </div>
