--- a/Frontend/src/app/profile/switch-account/switch-account.component.html
+++ b/Frontend/src/app/profile/switch-account/switch-account.component.html
@@ -27,7 +27,7 @@
 
 <div class="container" *ngIf="show">
   <div>
-    <img src="{{ profilePicRetrival + updateUserDetail.profilePhoto }}" />
+    <img src="{{ updateUserDetail.profilePhoto }}" />
     <p class="description">
       If you change your mind, you'll have to request to follow
       <i>{{ updateUserDetail.userName }}</i> again.
