Retrieve images in admin

--- a/Frontend/src/app/admin/user-detail-page/user-detail-page.component.html
+++ b/Frontend/src/app/admin/user-detail-page/user-detail-page.component.html
@@ -23,7 +23,7 @@
         <div id="post">
           <img
             src="{{post.fileUrl}}"
-            alt=""
+            alt="twisks"
             *ngIf="!post.videoFile"
           />
           <video
