--- a/Frontend/src/app/home/create-post/create-post.component.html
+++ b/Frontend/src/app/home/create-post/create-post.component.html
@@ -7,7 +7,7 @@
         <h4>Create new post</h4>
       </div>
       <div class="postContent">
-        <img src="../../../assets/createPost.png" alt="" />
+        <img src="../../../assets/createPost.png" alt="twisks" />
         <p id="choose">Choose a photo</p>
         <button class="choosePicsBtn btn">
           <span>Select from computer</span>
@@ -18,7 +18,7 @@
         <button class="choosePicsBtn btn" (click)="camera()">
           <span>Take a photo</span>
         </button>
-  
+
       </div>
     </div>
 
