--- a/Frontend/src/app/home/homepage/homepage.component.html
+++ b/Frontend/src/app/home/homepage/homepage.component.html
@@ -7,7 +7,7 @@
         <div class="postHeader">
           <img
             src="{{user.userDetails[0].profilePhoto }}"
-            alt=""/>
+            alt="twisks"/>
           <strong>{{ user.userDetails[0].userName }}</strong>
           <div>
             <span
@@ -22,7 +22,7 @@
         <div class="postImage">
           <img
             [src]="user.fileUrl"
-            alt=""
+            alt="twisks"
             srcset=""
             *ngIf="!user.videoFile"
           />
@@ -67,7 +67,7 @@
     <div class="account">
       <img
         src="{{this.userDp}}"
-        alt=""
+        alt="twisks"
       />
       <strong>{{ this.username }}</strong>
 
