--- a/Frontend/src/app/profile/follower/follower.component.html
+++ b/Frontend/src/app/profile/follower/follower.component.html
@@ -13,7 +13,7 @@
       <img
         class="profile"
         src="{{user.profilePhoto }}"
-        alt=""
+        alt="twisks"
       />
       <div class="name">
         <p>
