--- a/Frontend/src/app/profile/profile/profile.component.html
+++ b/Frontend/src/app/profile/profile/profile.component.html
@@ -87,7 +87,7 @@
             <div id="post">
               <img
                 src="{{post.fileUrl}}"
-                alt=""
+                alt="twisks"
                 (click)="viewPost(post)"
                 *ngIf="!post.videoFile"
               />
