--- a/Frontend/src/app/message/create-group/create-group.component.html
+++ b/Frontend/src/app/message/create-group/create-group.component.html
@@ -12,7 +12,7 @@
         <div class="user" *ngFor="let user of searchResult">
           <div id="tapToChat">
             <div class="userDp">
-              <img src="{{user.profilePhoto}}" alt="" srcset="">
+              <img src="{{user.profilePhoto}}" alt="twisks" srcset="">
               <strong>{{ user.name }}</strong> <br>
               <small *ngIf="user.userName==username" id="you">(You)</small>
             </div>
